# Germinal

./: .gitignore  AGENTS.md  ChangeLog  Makefile.am  NEWS  README  README.md  TODO  autogen.sh  configure.ac  germinal.desktop.in  germinal.spec  meson.build  mock-build.sh  release.sh
.github/workflows/: ci.yml  lint.yml
data/: appstream.mk  dbus.mk  desktop.mk  germinal.desktop.in  gsettings.mk  meson.build  org.gnome.Germinal.gschema.xml.in.in  systemd.mk
data/appstream/: org.gnome.Germinal.appdata.xml.in
data/dbus/: org.gnome.Germinal.dbus.in
data/desktop/: org.gnome.Germinal.desktop.in.in
data/gsettings/: org.gnome.Germinal.gschema.xml  org.gnome.Germinal.gschema.xml.in
data/metainfo/: org.gnome.Germinal.metainfo.xml.in
data/systemd/: org.gnome.Germinal.systemd.in
po/: Makevars  POTFILES.in  POTFILES.skip  fr.po
src/: germinal-cleanup.h  germinal-util.h  germinal.c  germinal.mk  meson.build
src/germinal/: germinal-cleanup.h  germinal-palette-editor.c  germinal-palette-editor.h  germinal-preferences.c  germinal-preferences.h  germinal-settings.c  germinal-settings.h  germinal-terminal.c  germinal-terminal.h  germinal-util.h  germinal-window.c  germinal-window.h  germinal.c
tests/: meson.build  regexp.mk  test-regexp.c
tests/palette-editor/: test-palette-editor.c
tests/regexp/: test-regexp.c
tests/settings/: test-settings.c
