# This file is part of Germinal.
#
# Copyright 2011-2015 Marc-Antoine Perennou <Marc-Antoine@Perennou.com>
#
# Germinal is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# Germinal is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with Germinal.  If not, see <http://www.gnu.org/licenses/>.

SUBDIRS = po

ACLOCAL_AMFLAGS  = -I m4 ${ACLOCAL_FLAGS}
AM_MAKEFLAGS = --no-print-directory

AM_CFLAGS =                          \
	-include config.h            \
	-I $(srcdir)/src/germinal/   \
	-DLOCALEDIR=\"${localedir}\" \
	$(GLIB_CFLAGS)               \
	$(GTK_CFLAGS)                \
	$(PANGO_CFLAGS)              \
	$(VTE_CFLAGS)                \
	$(NULL)

AM_LIBS =            \
	$(GLIB_LIBS) \
	$(GTK_LIBS)  \
	$(VTE_LIBS)  \
	$(NULL)

EXTRA_DIST =       \
	autogen.sh \
	README.md  \
	$(NULL)

CLEANFILES =
SUFFIXES =

bin_PROGRAMS =

TESTS=
noinst_PROGRAMS= \
	$(TESTS) \
	$(NULL)

@INTLTOOL_XML_NOMERGE_RULE@

# Binaries

include src/germinal.mk

# Data

include data/desktop.mk
include data/gsettings.mk

# Tests stuff

include tests/regexp.mk

# Maintainance stuff

update-po:
	$(MAKE) -C po $@

release:
	$(MAKE) update-po && \
	$(MAKE) distcheck && \
	git commit -asm "Release $(PACKAGE_NAME) $(PACKAGE_VERSION)" && \
	git tag -sm "Release $(PACKAGE_NAME) $(PACKAGE_VERSION)" v$(PACKAGE_VERSION)

# Generate a ChangeLog file from 'git log'
dist-hook:
	@if test -d "$(srcdir)/.git"; \
        then \
                echo Creating ChangeLog && \
                ( cd "$(top_srcdir)" && \
                  echo '# Generated by Makefile. Do not edit.'; echo; \
                  $(top_srcdir)/.aux/missing --run git log --stat \
                ) > ChangeLog.tmp \
                && mv -f ChangeLog.tmp $(top_distdir)/ChangeLog \
                || ( rm -f ChangeLog.tmp ; \
                     echo Failed to generate ChangeLog >&2 ); \
        else \
                echo A git clone is required to generate a ChangeLog >&2; \
        fi
