executable('germinal',
  'germinal/germinal.c',
  'germinal/germinal-preferences.c',
  'germinal/germinal-settings.c',
  'germinal/germinal-terminal.c',
  'germinal/germinal-window.c',
  dependencies:        [glib_dep, gio_dep, gtk_dep, vte_dep, adwaita_dep, pango_dep, pcre2_dep],
  include_directories: include_directories('germinal'),
  install:             true,
)
